# prog2026

./: .gitignore
dz1/: CMakeLists.txt  main.cpp  tv.cpp  tv2.cpp
dz2/: CMakeLists.txt  cat.cpp  cat.h  cat_main.cpp  library.cpp  library.h  library_main.cpp
dz3/: CMakeLists.txt  main.cpp  modulo.cpp  modulo.h  point.cpp  point.h
dz4/: CMakeLists.txt  bar.cpp  bar.h  hole.cpp  hole.h  main.cpp  oven.cpp  oven.h
dz5/: CMakeLists.txt  d2array.cpp  d2array.h  main.cpp  matrix.cpp  matrix.h
dz6/: CMakeLists.txt  dllist.cpp  dllist.h  main.cpp  queue.cpp  queue.h  stack.cpp  stack.h
lab1/: tv.h  tv2.h
